--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
   "dependencies": {
     "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.3.0",
-    "del": "^3.0.0",
+    "del": "^2.2.2",
+    "extend": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.4.2",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-clean-css": "^2.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
-    "gulp-sass": "^3.1.0",
+    "gulp-dedupe": "0.0.2",
+    "gulp-insert": "^0.5.0",
+    "gulp-s3": "^0.3.0",
+    "gulp-sass": "^3.0.0",
     "gulp-template": "^4.0.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
+    "map-stream": "0.0.6",
+    "minimist": "^1.2.0",
+    "morgan": "^1.7.0",
+    "open": "^0.0.5",
+    "run-sequence": "^1.2.2",
     "streamqueue": "^1.1.1",
-    "through2": "^2.0.3"
+    "tiny-lr": "^1.0.3"
   }
 }
